--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,6 +13,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        
+      - name: Setup Java JDK 17
+        uses: actions/setup-java@main
+        with:
+          distribution: zulu
+          java-version: 17
 
       - name: Compile
         run: |
