--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -12,13 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
-        
-      - name: Setup Java JDK 17
-        uses: actions/setup-java@main
-        with:
-          distribution: zulu
-          java-version: 17
+        uses: actions/checkout@main
 
       - name: Compile
         run: |
