--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -16,6 +16,7 @@ jobs:
 
       - name: Compile
         run: |
+          export JAVA_HOME=$JAVA_HOME_17_X64
           chmod +x gradlew
           ./gradlew assembleDebug
 
